syntax = "proto3";
package fx.other;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/functionx/fx-core/client/grpc/base/gasprice/legacy";

// Deprecated
service Query {
  // Deprecated
  rpc FxGasPrice(GasPriceRequest) returns (GasPriceResponse) {
    option (google.api.http).get = "/fx/other/gas_price";
  }
  // Deprecated
  rpc GasPrice(GasPriceRequest) returns (GasPriceResponse) {
    option (google.api.http).get = "/other/v1/gas_price";
  }
}

message GasPriceRequest {}

message GasPriceResponse {
  repeated cosmos.base.v1beta1.Coin gas_prices = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.moretags) = "yaml:\"gas_prices\""
  ];
}
